manifest/istio/rnd-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rnd-gw
  namespace: stage

spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 12001
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rnd-vs
  namespace: stage
spec:
  gateways:
  - rnd-gw
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: rnd-webapp.rnd.svc.cluster.local
        port:
          number: 12001
# apiVersion: networking.istio.io/v1alpha3
# name: gm
---
# namespace: istio-system
# spec:
# host: rnd-webapp.stage.svc.cluster.local
# trafficPolicy:
# tls:
# mode: DISABLE
